nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nginx-example
  name: nginx-server
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '9113'
    spec:
      containers:
        - name: nginx
          image: nginx:1.19.1
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
            - name: index
              mountPath: /usr/share/nginx/html
              subPath: index.html
          resources:
            limits:
              memory: "128Mi"
              cpu: "0.3"
      volumes: 
        - configMap:
            defaultMode: 420 
            name: nginx-config 
          name: nginx-config 
---
apiVersion: v1
kind: Service
metadata:
  namespace: nginx-example
  name: nginx
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: nginx-example
  name: nginx
  labels:
    name: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: "nginx.172.18.0.100.nip.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port: 
              number: 80
